--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
       <img src="./images/logo.png" alt="OpenStream Music" />
     </div>
     <div class="search">
-      <input type="text" id="search-input" placeholder="Search the whole song library" />
+      <input type="text" id="search-input" placeholder="SEARCH FOR UWU SONGS" />
     </div>
   </nav>
   <br>
@@ -25,8 +25,8 @@
     <div id="custom-player">
       <div id="player-controls">
         <div id="song-info">
-          <div id="song-name">You haven't chosen a song to play</div>
-          <div id="artist-name">Choose a song and it will show up here.</div>
+          <div id="song-name">UWU SONG PLAYER</div>
+          <div id="artist-name">CHOOSE AN UWU SONG</div>
         </div>
       </div>
       <audio id="audio-player" src=""></audio>
